fixed 'z-index' prop of component Message.jsx

--- a/src/components/common/Message/Message.scss
+++ b/src/components/common/Message/Message.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   position: fixed;
-  z-index: 999;
+  z-index: 9999;
   bottom: 50px;
   left: -100%;
   padding: 10px 15px;
